--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -59,7 +59,7 @@ University of Southern California}
 \noindent \textbf{[JJH: Why is an extension even necessary?]}
 
 \bigskip 
-\noindent \textbf{[Current length: 40 pages (references and some comments and dialogue included. This excludes title and addresses pages.]}
+\noindent \textbf{[Current length: 40 pages (references and some comments and dialogue included.) This excludes title and addresses pages.]}
 
 \bigskip
 
