edits from monday

--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -109,7 +109,7 @@ The program is a prototype for many programs planned or in place today.\footnote
 
 This paper addresses a fundamental problem that arises in evaluating social programs. Few program evaluations have complete life-cycle histories of participants. In our data, the oldest experimental subject is in his/her mid 30s. We forecast the full life-cycle benefits and costs of the program using non-experimental data guided by economic theory.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} discuss data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g.,\ \citealp{Prentice_1989_Surrogate_SiM}). However, as noted below, exogeneity is an integral part of the models we estimate, although it is not considered in the statistics literature. That literature does not provide testable predictions for validation of its forecasts as we do.} We compute internal rates of return and benefit/cost ratios based on the large array of benefits and costs generated. In constructing our estimates, we account for model estimation and forecasting error and the welfare cost of taxation required to fund the program. We subject our estimates to extensive sensitivity analyses.
 
-We construct synthetic cohorts from non-experimental samples that approximate the life cycles of experimentals in post-experimental years. Economic theory guides us in formulating and estimating invariant production functions that characterize program treatment effects. The estimated production functions depend on inputs changed by treatment that are measured in both experimental and non-experimental samples. The production functions themselves are assumed to be unaffected by treatment---a property we test and verify.\footnote{See \cite{Hurwicz_1962_structural} for the definition of policy invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out of sample forecasts.} We test invariance of the production functions using non-experimental samples that overlap, in part, with the experimental sample. We forecast experimental treatment effects using our estimated production functions applied to non-experimental data.
+We construct synthetic cohorts from non-experimental samples that approximate the life cycles of experimentals in their post-experimental years. Economic theory guides us in formulating and estimating invariant production functions that characterize program treatment effects. The estimated production functions depend on inputs changed by treatment that are measured in both experimental and non-experimental samples. The production functions themselves are assumed to be unaffected by treatment---a property we test and verify.\footnote{See \cite{Hurwicz_1962_structural} for the definition of policy invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out of sample forecasts.} We test invariance of the production functions using non-experimental samples that overlap, in part, with the experimental sample. We forecast experimental treatment effects using our estimated production functions applied to non-experimental data.
 
 Our analysis is a template for estimating the life-cycle gains of social experiments for which there is less than full lifetime follow-up. Supplementing experimental data with non-experimental data using economic and econometric theory enhances the forecasting power of experiments. 
 
@@ -129,7 +129,7 @@ ABC recruited four cohorts of children born between 1972 and 1976. CARE recruite
 
 Our analysis uses data from the first phase and pools the ABC treatment group with that of the CARE treatment groups. We do not use data from the CARE group that only received home visits in the early years. \cite{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} test and do not reject the hypothesis that the CARE data through age 5 (without home visits) and the ABC data (through age 5) come from the same distribution.
 
-The initial ABC sample consisted of 120 families. For reasons discussed in Appendix~\ref{appendix:background}, the study sample was reduced to 111 subjects: 53 in the treatment group and 58 in the control group. In CARE, the initial sample had 65 families: 23 were randomized to a control group, 25 to a family education treatment group, and 17 to a center-based childcare treatment group that followed ABC protocols.\textbf{[JJH: How many missing?] [JLG: Added in the next footnote.]} We use standard weighting methodologies to account for attrition and non-response.\footnote{See Appendix~\ref{app:method_partialobs}.}
+The initial ABC sample consisted of 120 families. For reasons discussed in Appendix~\ref{appendix:background}, the study sample was reduced to 111 subjects: 53 in the treatment group and 58 in the control group. In CARE, the initial sample had 65 families: 23 were randomized to a control group, 25 to a family education treatment group, and 17 to a center-based childcare treatment group that followed ABC protocols.\footnote{There were no randomization compromises in CARE. During preschool, 5 subjects attrited (3 in the treatment group, 1 in the family education group, and 1 in the control group). Details are in Appendix~\ref{appendix:background}.} \textbf{[JJH: How many missing?] [JLG: Added in the footnote.]} We use standard weighting methodologies to account for attrition and non-response.\footnote{See Appendix~\ref{app:method_partialobs}.}
 
 Annual observations on a variety of outcomes from ages 0 to 15 were collected. For both programs, data were collected annually on cognitive and socio-emotional skills, home environments, family structure, and family economic characteristics from birth until age 8. After age 8, data on cognitive and socio-emotional skills, education, and family economic characteristics were collected at ages 12, 15, 21, and 30.\footnote{At age 30, measures of cognitive skills are not available for both ABC and CARE.} In addition, there is information from administrative criminal records, a physician-administered medical survey, and a set of medical tests when the subjects were in their mid 30s.\footnote{See  Appendix~\ref{appendix:data} for a more comprehensive description of the data. There, we document the balance in observed baseline characteristics across the treatment and control groups after dropping the individuals for whom we have no crime or health information. There is substantial attrition for these data collections. The methodology that we propose addresses missing data in either of these two outcome categories.}
 
@@ -277,7 +277,7 @@ Assumption~\ref{ass:summary} has two distinct aspects that could be resolved fur
 \end{remark}
 
 \begin{remark} \label{remark:cohort} \textbf{(No) Cohort Effects}
-The second aspect of Assumption~\ref{ass:summary}, that the structural relationships are identical in the experimental and non-experimental samples, embeds an assumption about the absence of cohort effects. More precisely, a structural function $\bm{\phi}_{n,a}^d \left( \bm{x}, \bm{b} \right)$, which we identify and estimate in the non-experimental sample with subjects who are older than those in the experimental sample, is a valid tool for forecasting the experimental sample at older ages currently out of the experiment. Note that this does not mean that there are not cohort effects in the outcome of interest, $\bm{Y}_{k,a}^d$. Instead, it means that there are not cohort effects in the \textbf{mapping} between $\bm{X}_{k,a}, \bm{B}_k$ and $\bm{Y}_{k,a}^d$. In addition to Assumption~\ref{ass:summary}, we require that the path of the inputs used for forecasting is the same across treatment regimes. Formally, this should be made a separate assumption. For brevity, we fold it into Assumption~\ref{ass:summary}.\footnote{We explore adjustments of our estimates to account for cohort effects in Section~\ref{section:cbaresults}.} 
+A second aspect of Assumption~\ref{ass:summary}, that the structural relationships are identical in the experimental and non-experimental samples, embeds an assumption about the absence of cohort effects. More precisely, a structural function $\bm{\phi}_{n,a}^d \left( \bm{x}, \bm{b} \right)$, which we identify and estimate in the non-experimental sample with subjects who are older than those in the experimental sample, is a valid tool for forecasting the experimental sample at older ages currently out of the experiment. Note that this does not mean that there are not cohort effects in the outcome of interest, $\bm{Y}_{k,a}^d$. Instead, it means that there are not cohort effects in the \textbf{mapping} between $\bm{X}_{k,a}, \bm{B}_k$ and $\bm{Y}_{k,a}^d$. In addition to Assumption~\ref{ass:summary}, we require that the path of the inputs used for forecasting is the same across treatment regimes. Formally, this should be made a separate assumption. For the sake of brevity, we fold it into Assumption~\ref{ass:summary}.\footnote{We explore adjustments of our estimates to account for cohort effects in Section~\ref{section:cbaresults}.} 
 
 
 
@@ -428,7 +428,7 @@ Note: Panel (a) displays the forecasted life-cycle labor income profiles for ABC
 
 The forecasted present value of the gain induced by treatment using the estimates displayed in Figure~\ref{fig:labor-income-profiles} is $636,674$ (s.e.\ $183,224$) in 2014 USD. We explore the impact of alternative forecasting models in Appendix~\ref{appendix:predsensitivity}. When pooling males and females and when separating the samples by gender, the present value gains remain within a range that does not change our inference that the program has sustained benefits.
 
-A non-parametric forecasting alternative is to compress the whole procedure. Under Assumptions~\ref{ass:exog} and~\ref{ass:summary}, we can use matching on baseline and post-treatment variables to construct counterparts to the experimental treatment and control groups in the non-experimental sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} discuss this procedure.} Matching in this fashion creates direct counterparts in the auxiliary samples for each member of the experimental samples. Instead of estimating a model for the life-cycle profile of labor income, we directly use the matched counterparts' profiles. It is an intuitively appealing non-parametric estimator that is valid under exogeneity \citep{Heckman_Navarro_2004_REStat}. We discuss this approach in Appendix~\ref{appendix:match}. Matching is a non-parametric estimation procedure for conditional mean functions. There is close agreement between non-parametric estimates based on matching and more parametric model-based approaches in Table~\ref{table:predsens}. This procedure is a further test of exogeneity. 
+A non-parametric forecasting alternative is to compress the whole procedure. Under Assumptions~\ref{ass:exog} and~\ref{ass:summary}, we can use matching on baseline and post-treatment variables to construct counterparts to the experimental treatment and control groups in the non-experimental sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} discuss this procedure.} Matching in this fashion creates direct counterparts in the auxiliary samples for each member of the experimental samples. Instead of estimating a model for the life-cycle profile of labor income, we directly use the matched counterparts' profiles. It is an intuitively appealing non-parametric estimator that is valid under exogeneity \citep{Heckman_Navarro_2004_REStat}. We discuss this approach in Appendix~\ref{appendix:match}. Matching is a non-parametric estimation procedure for conditional mean functions. There is close agreement between non-parametric estimates based on matching and more parametric model-based approaches in Table~\ref{table:predsens}. This concordance is a further test of exogeneity. 
 
 \section{Forecasting Life-cycle Costs and Benefits: Practice} \label{section:cbapractice}
 
